--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:name=".IMApplication"
         android:allowBackup="true"
-        android:icon="@drawable/logo2"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -68,6 +68,9 @@
         <activity android:name=".controller.activity.GroupDetailActivity" />
         <activity android:name=".controller.activity.GroupListActivity" />
         <activity android:name=".controller.activity.NewGroupActivity" />
+        <activity android:name=".controller.activity.RegisterActivity" />
+        <activity android:name=".controller.activity.LoginActivity" />
+        <activity android:name=".controller.activity.RegisterTwoActivity" />
 
     </application>
 
